<resources>
    <!-- 这里绑定navigation view的名称 -->
    <string name="app_name">云启乡翼孩子端</string>
    <string name="title_lecture">互动讲题</string>
    <string name="title_workshop">科普课堂</string>
    <string name="title_sanctuary">心灵树洞</string>
    <string name="title_account">个人中心</string>

    <string-array name="grade_options">
        <item>一年级</item>
        <item>二年级</item>
        <item>三年级</item>
        <item>四年级</item>
        <item>五年级</item>
        <item>六年级</item>
        <item>七年级</item>
        <item>八年级</item>
        <item>九年级</item>
    </string-array>
    <string-array name="education_options">
        <item>小学</item>
        <item>初中</item>
        <item>高中</item>
    </string-array>

    <string name="title_diary">心情日记</string>
    <string name="title_tree">心灵树洞</string>
    <string name="captured_image">Captured Image</string>
</resources>



