<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_lecture">

    <!-- Lecture Fragment -->
    <fragment
        android:id="@+id/navigation_lecture"
        android:name="com.example.cloudchat_user.ui.interactive_lecture.LectureFragment"
        android:label="@string/title_lecture"
        tools:layout="@layout/fragment_lecture">
        <action
            android:id="@+id/action_lecture_to_danmaku"
            app:destination="@id/navigation_danmaku" />
    </fragment>
    <fragment
        android:id="@+id/navigation_danmaku"
        android:name="com.example.cloudchat_user.ui.interactive_lecture.DanmakuFragment"
        android:label="弹幕"
        tools:layout="@layout/fragment_danmaku" />


    <!-- Workshop Fragment -->
    <fragment
        android:id="@+id/navigation_workshop"
        android:name="com.example.cloudchat_user.ui.science_workshop.WorkshopFragment"
        android:label="@string/title_workshop"
        tools:layout="@layout/fragment_workshop" />

    <!-- Sanctuary Fragment -->
    <fragment
        android:id="@+id/navigation_sanctuary"
        android:name="com.example.cloudchat_user.ui.mind_sanctuary.SanctuaryFragment"
        android:label="@string/title_sanctuary"
        tools:layout="@layout/fragment_sanctuary">
        <!-- 跳转到 DiaryFragment -->
        <action
            android:id="@+id/action_sanctuary_to_diary"
            app:destination="@id/navigation_diary" />
        <!-- 跳转到 TreeFragment -->
        <action
            android:id="@+id/action_sanctuary_to_tree"
            app:destination="@id/chatFragment" />
    </fragment>

    <!-- Diary Fragment -->
    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.example.cloudchat_user.ui.mind_sanctuary.DiaryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.cloudchat_user.ui.mind_sanctuary.ChatFragment"
        android:label="聊天"
        tools:layout="@layout/fragment_chat" />

    <!-- Account Fragment -->
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.cloudchat_user.ui.my_account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>
